--- a/style/style.css
+++ b/style/style.css
@@ -464,6 +464,7 @@ img {
   margin-inline: auto;
   gap: 2rem;
 }
+
 .section__projects {
   position: relative;
   margin-inline: auto;
@@ -474,7 +475,7 @@ img {
   align-items: stretch;
   gap: 4rem;
   align-self: stretch;
-  overflow-y: scroll;
+  overflow-x: scroll;
   scroll-snap-type: x mandatory;
   scroll-behavior: smooth;
 }
